[package]
name = "substrate-rbac"
version = "0.1.1"
authors = ["gautamdhameja"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/gautamdhameja/substrate-rbac"

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'frame-system/std',
    'serde',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.sp-std]
default-features = false
version = '2.0.1'

[dependencies.sp-runtime]
default-features = false
version = '2.0.1'

[dependencies.sp-io]
default-features = false
version = '2.0.1'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-core]
default-features = false
version = '2.0.1'

[dependencies.frame-support]
default-features = false
version = '2.0.1'

[dependencies.frame-system]
default-features = false
version = '2.0.1'
